Fix vertical alignment of spans for highlighted code block

--- a/doc/source/_static/dash.css
+++ b/doc/source/_static/dash.css
@@ -22,3 +22,8 @@ width.  To be used with sphinx-pydata-theme
   flex-grow: 1;
   max-width: 100%;
 }
+
+/* patching issue from pydata-sphinx-theme */
+div.viewcode-block:target {
+  display: block;
+}
